--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,8 @@ services:
       - "${SCHEDULER_SERVICE_PORT}:${INTERNAL_PORT}"
     restart: always
     environment:
-      USER-SERVICE_URL: $USER_SERVICE_URL
-      DELIVERY-SERVICE_URL: $DELIVERY_SERVICE_URL
-      PACKAGE-SERVICE_URL: $PACKAGE_SERVICE_URL
-      DRONE-SERVICE_URL: $DRONE_SERVICE_URL
-      THIRD-PARTY-TRANSPORTATION-SERVICE_URL: $THIRD_PARTY_TRANSPORTATION_SERVICE_URL
+      GRPC_CLIENT_DELIVERY-MANAGEMENT_ADDRESS: $DELIVERY_SERVICE_ADDRESS
+      GRPC_CLIENT_DELIVERY-MANAGEMENT_NEGOTIATION-TYPE: plaintext
     networks:
       - backend
 
