Add schedule delivery implementation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,14 @@ services:
     environment:
       GRPC_CLIENT_DELIVERY-MANAGEMENT_ADDRESS: $DELIVERY_SERVICE_ADDRESS
       GRPC_CLIENT_DELIVERY-MANAGEMENT_NEGOTIATION-TYPE: plaintext
+      GRPC_CLIENT_USER-MANAGEMENT_ADDRESS: $USER_SERVICE_ADDRESS
+      GRPC_CLIENT_USER-MANAGEMENT_NEGOTIATION-TYPE: plaintext
+      GRPC_CLIENT_PACKAGE-MANAGEMENT_ADDRESS: $PACKAGE_SERVICE_ADDRESS
+      GRPC_CLIENT_PACKAGE-MANAGEMENT_NEGOTIATION-TYPE: plaintext
+      GRPC_CLIENT_DRONE-MANAGEMENT_ADDRESS: $DRONE_SERVICE_ADDRESS
+      GRPC_CLIENT_DRONE-MANAGEMENT_NEGOTIATION-TYPE: plaintext
+      GRPC_CLIENT_THIRD-PARTY-TRANSPORTATION-MANAGEMENT_ADDRESS: $THIRD_PARTY_TRANSPORTATION_SERVICE_ADDRESS
+      GRPC_CLIENT_THIRD-PARTY-TRANSPORTATION-MANAGEMENT_NEGOTIATION-TYPE: plaintext
     networks:
       - backend
 
